(config) java11 버전에 맞게 코드 변경